--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,3 +2,4 @@ $font-family: "Lato", Arial, Helvetica, sans-serif;
 $green: #03a84e;
 $text-black: #373737;
 $text-gray: #9c9aa6;
+$background-white: #f9f9f9;
